# SimpleVisualOdometry

./: README.md
simple_visual_odometry/: .cproject  .project  CMakeLists.txt  package.xml
simple_visual_odometry/five-point-nister/: _modelest.h  five-point.cpp  five-point.hpp  modelest.cpp
simple_visual_odometry/include/: Backend.h  ConfigManager.h  Features.h  OccupancyGrid.h  TrajectoryPublisher.h  VisualFrontend.h  VisualOdometryLogic.h  opencv3.h  tf2_eigen.h
simple_visual_odometry/include/backend/: Backend.h  Backend2D.h  BackendSFM.h
simple_visual_odometry/include/core/: Features.h  utils.h
simple_visual_odometry/include/frontend/: OccupancyGrid.h  VisualFrontend.h
simple_visual_odometry/include/logic/: VisualOdometryLogic.h
simple_visual_odometry/include/publishers/: FeaturesPublisher.h
simple_visual_odometry/launch/: odometry.launch
simple_visual_odometry/src/: Backend.cpp  ConfigManager.cpp  FeaturesPublisher.cpp  OccupancyGrid.cpp  TrajectoryPublisher.cpp  VisualFrontend.cpp  VisualOdometryLogic.cpp  five-point.cpp  main.cpp
simple_visual_odometry/src/backend/: Backend.cpp  Backend2D.cpp  BackendSFM.cpp
simple_visual_odometry/src/frontend/: OccupancyGrid.cpp  VisualFrontend.cpp
simple_visual_odometry/src/logic/: ConfigManager.cpp  VisualOdometryLogic.cpp
simple_visual_odometry/src/publishers/: FeaturesPublisher.cpp  TrajectoryPublisher.cpp
simple_visual_odometry/test/: TFTest.cpp  test.cpp  testEssential.cpp  testFivePoints.cpp  testPnP.cpp
