<?xml version="1.0"?>
<package>
	<name>simple_visual_odometry</name>
	<version>1.0.0</version>
	<description>Example of a visual odometry system</description>

	<maintainer email="davide.tateo@polimi.it">Davide Tateo</maintainer>

	<license>GPLv3</license>

	<author email="davide.tateo@polimi.it">Davide Tateo</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>opencv2</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>image_geometry</build_depend>
	<build_depend>tf2_ros</build_depend>
	<build_depend>tf2_eigen</build_depend>

	<run_depend>roscpp</run_depend>

</package>
